# paketstation

./: .env.example  .gitignore  README.md  main.py  ppt.md  pyproject.toml  requirements.txt
src/: api.py  config.py  data_loader.py  db.py  scoring.py  visualizer.py
src/paketstation/: __init__.py  ahp.py  api.py  config.py  data_loader.py  db.py  scoring.py  visualizer.py
tests/: test_ahp.py  test_data_loader.py  test_scoring.py  test_weights.py
